# ants-bevy

./: CNAME  Cargo.toml  README.md  build-wasm.sh  index.html
src/: ants.rs  collisions.rs  constants.rs  food.rs  grid.rs  main.rs  nest.rs  walls.rs  world.rs
src/ants/: collisions.rs  detect_food.rs  detect_nest.rs  detect_walls.rs  mod.rs  move_ants.rs  pheromones.rs
